--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,9 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "not7that",
+    "username": "affilate",
+    "password": "affilate",
     "database": "affilate_trading",
-    "host": "127.0.0.1",
-    "port":"5434",
+    "host": "18.118.210.250"
     "dialect": "postgres"
   },
   "test": {
