--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "affilate",
-    "password": "affilate",
+    "username": "postgres",
+    "password": "not7that",
     "database": "affilate_trading",
-    "host": "ec2-18-118-210-250.us-east-2.compute.amazonaws.com",
+    "host": "localhost",
     "dialect": "postgres"
   },
   "test": {
