--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "https-proxy-agent": "^5.0.0",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
